Experiment with github environment variables
Signed-off-by: Gary O'Neall <gary@sourceauditor>

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -41,7 +41,7 @@ jobs:
           # Escape newlines (replace \n with %0A)
           echo "::set-output name=diff::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
       - run: echo "${{ steps.diff.outputs.diff }}"
-     # - name: Validate canonical match
-        # run: make validate-canonical-match
+      - name: Validate canonical match
+         run: make validate-canonical-match
     env:
         SHA_FOR_GITHUB: ${{ github.sha }}
